# SocketSample

./: .editorconfig  CMakeLists.txt  ReadMe.md  SocketExample.cppcheck
.github/workflows/: ci.yml
Client/: CMakeLists.txt  Main.cpp  PCH.hpp
Server/: CMakeLists.txt  Main.cpp  PCH.hpp  ServerSocket.cpp  ServerSocket.hpp
Shared/: AddressInfo.cpp  AddressInfo.hpp  CMakeLists.txt  ClientSocket.cpp  ClientSocket.hpp  LogWrap.hpp  PCH.hpp  Socket.cpp  Socket.hpp  Types.hpp
Shared/Win32/: WsaInit.cpp  WsaInit.hpp
